# icrc-nft-types

./: Cargo.toml  README.md
src/: burnable.rs  lib.rs  mintable.rs
src/icrc37/: approve.rs  errors.rs  mod.rs  transaction.rs  transfer_from.rs  types.rs
src/icrc7/: errors.rs  metadata.rs  mod.rs  transaction.rs  transfer.rs  types.rs
