[package]
name = "icrc-nft-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["rlib"]

[dependencies]
candid = "0.10.3"
icrc-ledger-types = "0.1.5"
serde = { version = "1", features = ["derive"] }
